// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Avatar should match snapshot (default) 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  box-sizing: border-box;
  border-radius: 2rem;
  background-color: #F1694B;
  height: 3.5rem;
  position: relative;
  width: 3.5rem;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  height: 100%;
  object-fit: cover;
  max-height: 100%;
  max-width: 100%;
  width: 100%;
}

.emotion-6 {
  box-sizing: border-box;
  height: 100%;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  font-size: 14px;
  font-weight: 800;
  margin: 0;
}

<div
    class="emotion-0 emotion-1"
    height="14"
  >
    <div
      class="emotion-2 emotion-1"
      height="14"
      style="overflow: hidden;"
      width="14"
    >
      <img
        alt="Person Name's avatar image"
        class="emotion-4 emotion-5"
        src="a"
      />
    </div>
    <div
      class="emotion-6 emotion-1"
      direction="column"
      height="100%"
    >
      <p
        class="emotion-8 emotion-9"
      >
        Person Name
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/Avatar should match snapshot (lg) 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  box-sizing: border-box;
  border-radius: 2rem;
  background-color: #F1694B;
  height: 4rem;
  position: relative;
  width: 4rem;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  height: 100%;
  object-fit: cover;
  max-height: 100%;
  max-width: 100%;
  width: 100%;
}

.emotion-6 {
  box-sizing: border-box;
  height: 100%;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  font-size: 16px;
  font-weight: 800;
  margin: 0;
}

<div
    class="emotion-0 emotion-1"
    height="16"
  >
    <div
      class="emotion-2 emotion-1"
      height="16"
      style="overflow: hidden;"
      width="16"
    >
      <img
        alt="Person Name's avatar image"
        class="emotion-4 emotion-5"
        src="a"
      />
    </div>
    <div
      class="emotion-6 emotion-1"
      direction="column"
      height="100%"
    >
      <p
        class="emotion-8 emotion-9"
      >
        Person Name
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/Avatar should match snapshot (no image) 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  box-sizing: border-box;
  border-radius: 2rem;
  background-color: #F1694B;
  height: 4rem;
  position: relative;
  width: 4rem;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  color: white;
  font-size: 24px;
  margin: 0;
  margin-bottom: 0.125rem;
}

.emotion-6 {
  box-sizing: border-box;
  height: 100%;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  font-size: 16px;
  font-weight: 800;
  margin: 0;
}

<div
    class="emotion-0 emotion-1"
    height="16"
  >
    <div
      class="emotion-2 emotion-1"
      height="16"
      style="overflow: hidden;"
      width="16"
    >
      <p
        class="emotion-4 emotion-5"
        color="white"
      >
        PN
      </p>
    </div>
    <div
      class="emotion-6 emotion-1"
      direction="column"
      height="100%"
    >
      <p
        class="emotion-8 emotion-5"
      >
        Person Name
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/Avatar should match snapshot (no name) 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  box-sizing: border-box;
  border-radius: 2rem;
  background-color: #F1694B;
  height: 4rem;
  position: relative;
  width: 4rem;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  height: 100%;
  object-fit: cover;
  max-height: 100%;
  max-width: 100%;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
    height="16"
  >
    <div
      class="emotion-2 emotion-1"
      height="16"
      style="overflow: hidden;"
      width="16"
    >
      <img
        alt="undefined's avatar image"
        class="emotion-4 emotion-5"
        src="a"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/Avatar should match snapshot (sm) 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  box-sizing: border-box;
  border-radius: 2rem;
  background-color: #F1694B;
  height: 2.5rem;
  position: relative;
  width: 2.5rem;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  height: 100%;
  object-fit: cover;
  max-height: 100%;
  max-width: 100%;
  width: 100%;
}

.emotion-6 {
  box-sizing: border-box;
  height: 100%;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  font-size: 12px;
  font-weight: 800;
  margin: 0;
}

<div
    class="emotion-0 emotion-1"
    height="10"
  >
    <div
      class="emotion-2 emotion-1"
      height="10"
      style="overflow: hidden;"
      width="10"
    >
      <img
        alt="Person Name's avatar image"
        class="emotion-4 emotion-5"
        src="a"
      />
    </div>
    <div
      class="emotion-6 emotion-1"
      direction="column"
      height="100%"
    >
      <p
        class="emotion-8 emotion-9"
      >
        Person Name
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/Avatar should match snapshot (with description) 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  box-sizing: border-box;
  border-radius: 2rem;
  background-color: #F1694B;
  height: 4rem;
  position: relative;
  width: 4rem;
  margin-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  height: 100%;
  object-fit: cover;
  max-height: 100%;
  max-width: 100%;
  width: 100%;
}

.emotion-6 {
  box-sizing: border-box;
  height: 100%;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  font-size: 16px;
  font-weight: 800;
  margin: 0;
}

.emotion-10 {
  color: #9A9897;
  font-size: 14px;
  margin: 0;
}

<div
    class="emotion-0 emotion-1"
    height="16"
  >
    <div
      class="emotion-2 emotion-1"
      height="16"
      style="overflow: hidden;"
      width="16"
    >
      <img
        alt="Person Name's avatar image"
        class="emotion-4 emotion-5"
        src="a"
      />
    </div>
    <div
      class="emotion-6 emotion-1"
      direction="column"
      height="100%"
    >
      <p
        class="emotion-8 emotion-9"
      >
        Person Name
      </p>
      <p
        class="emotion-10 emotion-9"
        color="grey.500"
      >
        Job description
      </p>
    </div>
  </div>
</DocumentFragment>
`;
